# rfid-pet-feeder

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: .env.example
deploy/: fedorentos.service
docs/: viam-setup.md
legacy/: README.md
legacy/initial/: initial.ino
src/: complete.ino  config.py  initial.ino  main.py  viam_connection.py
src/complete/: complete.ino  utils.h
src/feeder/: feeder.py  feeder_manager.py
src/hardware/: presence_sensor.py  servo_controller.py
src/utils/: logger.py
src/vision/: classifier.py
